--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="blurr" id="init">
     <div class="user">
         <div class="multiplier">Current Multiplier : <p id="multi">x 1</p></div>
         <div class="score">Your Score : <p id="scr"></p></div>
@@ -25,12 +25,12 @@
 
         </ul>
     </div>
-    <div class="gradient"></div>
+</div>
 
-    <div id="input">
-        <input type="text" placeholder="pick a username" id="username">
-        <input type="button" id="btn" value="yumm">
-    </div>
+<div id="input">
+    <input type="text" placeholder="pick a username" id="username">
+    <input type="button" id="btn" value="yumm">
+</div>
 
 
 </body>
