--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
     <script src="sketch.js"></script>
     <script src="snake.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Raleway:500');
+    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,7 +30,7 @@
 </div>
 
 <div id="input">
-    <input type="text" placeholder="pick a username" id="username">
+    <input type="text" placeholder="    pick a username" id="username">
     <input type="button" id="btn" value="yumm">
 </div>
 
