--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="sketch.js"></script>
-    <script src="snake.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Raleway:500');
     </style>
@@ -23,14 +21,20 @@
         <ul id="leaderboard-list">
 
         </ul>
+        <em id="your" class="my_score"></em>
     </div>
 </div>
 
 <div id="input">
+    <h1>Snake</h1>
     <input type="text" placeholder="    pick a username" id="username">
     <input type="button" id="btn" value="yumm">
 </div>
 
-
+<div id="die">
+    <h2>You Died...</h2>
+</div>
+<script src="sketch.js"></script>
+<script src="snake.js"></script>
 </body>
 </html>
