--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <div class="blurr" id="init">
+    <div id="message-multiplier">Multiplier +1</div>
     <div class="user">
         <div class="multiplier">Current Multiplier : <p id="multi">x 1</p></div>
         <div class="score">Your Score : <p id="scr"></p></div>
