temporary soln to hack

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
 <div id="input">
     <h1>Snake</h1>
-    <input type="text" placeholder="    pick a username" id="username">
+    <input type="text" maxlength="10" placeholder="    pick a username" id="username">
     <input type="button" id="btn" value="yumm">
 </div>
 
